Ensure overlays are on a higher z-index than what's behind them

--- a/less/site.less
+++ b/less/site.less
@@ -110,6 +110,7 @@ a {
     right: 0;
     bottom: 0;
     height: 100%;
+    z-index: 1;
 
     background: fade(#333333, 80%);
 }
